--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/assets/Me.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="a Website portfolio for Moahamed Echbiy "
+    />
+    <meta
+      name="keywords"
+      content="portfolio , Mohamed Echbiy , front end developer , developer Mohamed Echbiy"
+    />
+    <meta name="author" content="Mohamed Echbiy" />
+    <meta name="copyright" content="Mohamed Echbiy" />
     <title>My_Portfollio</title>
     <link rel="stylesheet" href="./Animation.css" />
   </head>
